@@ -59,7 +59,10 @@ output_file_close (char *filename)
     return;
     
   /* Close the bfd.  */
-  res = bfd_close (stdoutput);
+  if (had_errors ())
+    res = bfd_cache_close_all ();
+  else
+    res = bfd_close (stdoutput);
 
   /* Prevent an infinite loop - if the close failed we will call as_fatal
      which will call xexit() which may call this function again...  */
